@@ -1,7 +1,7 @@
 package org.apache.spark.metrics
 
 import com.codahale.metrics.Timer.Context
-import org.apache.spark.SparkEnv
+import org.apache.spark.{SparkEnv, TaskContext}
 
 /** The base trait for metrics updaters implementations. The metrics updater is an object which provides
   * a unified way to update all the relevant metrics which are collected for the particular type of
@@ -10,6 +10,15 @@ import org.apache.spark.SparkEnv
 trait MetricsUpdater {
   /** A method to be called when the task is finished. It stops the task timer and flushes data. */
   def finish(): Long
+}
+
+object MetricsUpdater {
+  val cassandraConnectorSourceName = "cassandra-connector"
+
+  def getSource(taskContext: TaskContext): Option[CassandraConnectorSource] =
+    taskContext
+        .getMetricsSources(cassandraConnectorSourceName).headOption
+        .map(_.asInstanceOf[CassandraConnectorSource])
 }
 
 /** Timer mixin allows to measure the time of a task - or, in other words - the time from creating an
