@@ -3,7 +3,8 @@ package org.apache.spark.metrics
 import java.util.concurrent.CountDownLatch
 
 import org.apache.spark.executor.{DataWriteMethod, OutputMetrics, TaskMetrics}
-import org.apache.spark.{TaskContext, SparkConf, SparkEnv}
+import org.apache.spark.metrics.source.Source
+import org.apache.spark.{SparkConf, TaskContext}
 import org.mockito.Mockito._
 import org.scalatest.mock.MockitoSugar
 import org.scalatest.{BeforeAndAfter, FlatSpec, Matchers}
@@ -14,13 +15,12 @@ class OutputMetricsUpdaterSpec extends FlatSpec with Matchers with BeforeAndAfte
 
   val ts = System.currentTimeMillis()
 
-  after {
-    SparkEnv.set(null)
-  }
-
-  private def newTaskContext(): TaskContext = {
+  private def newTaskContext(useTaskMetrics: Boolean = true)(sources: Source*): TaskContext = {
     val tc = mock[TaskContext]
-    when(tc.taskMetrics()) thenReturn new TaskMetrics
+    if (useTaskMetrics) {
+      when(tc.taskMetrics()) thenReturn new TaskMetrics
+    }
+    when(tc.getMetricsSources(MetricsUpdater.cassandraConnectorSourceName)) thenReturn sources
     tc
   }
 
@@ -32,13 +32,10 @@ class OutputMetricsUpdaterSpec extends FlatSpec with Matchers with BeforeAndAfte
   }
 
   "OutputMetricsUpdater" should "initialize task metrics properly when they are empty" in {
-    val tc = newTaskContext()
+    val tc = newTaskContext()()
     tc.taskMetrics().outputMetrics = None
-
     val conf = new SparkConf(loadDefaults = false)
-    conf.set("spark.cassandra.output.metrics", "true")
-
-    SparkEnv.set(mock[SparkEnv])
+      .set("spark.cassandra.output.metrics", "true")
     OutputMetricsUpdater(tc, WriteConf.fromSparkConf(conf))
 
     tc.taskMetrics().outputMetrics.isDefined shouldBe true
@@ -48,13 +45,10 @@ class OutputMetricsUpdaterSpec extends FlatSpec with Matchers with BeforeAndAfte
   }
 
   it should "initialize task metrics properly when they are defined" in {
-    val tc = newTaskContext()
+    val tc = newTaskContext()()
     tc.taskMetrics().outputMetrics = Some(new OutputMetrics(DataWriteMethod.Hadoop))
-
     val conf = new SparkConf(loadDefaults = false)
-    conf.set("spark.cassandra.output.metrics", "true")
-
-    SparkEnv.set(mock[SparkEnv])
+      .set("spark.cassandra.output.metrics", "true")
     OutputMetricsUpdater(tc, WriteConf.fromSparkConf(conf))
 
     tc.taskMetrics().outputMetrics.isDefined shouldBe true
@@ -64,16 +58,13 @@ class OutputMetricsUpdaterSpec extends FlatSpec with Matchers with BeforeAndAfte
   }
 
   it should "create updater which uses task metrics" in {
-    val tc = newTaskContext()
+    val tc = newTaskContext()()
     tc.taskMetrics().outputMetrics = None
-
     val conf = new SparkConf(loadDefaults = false)
-    conf.set("spark.cassandra.output.metrics", "true")
-
-    SparkEnv.set(mock[SparkEnv])
+      .set("spark.cassandra.output.metrics", "true")
     val updater = OutputMetricsUpdater(tc, WriteConf.fromSparkConf(conf))
-
     val rc = newRichStatement()
+
     updater.batchFinished(success = true, rc, ts, ts)
     tc.taskMetrics().outputMetrics.get.bytesWritten shouldBe 100L // change registered when success
     tc.taskMetrics().outputMetrics.get.recordsWritten shouldBe 10L
@@ -84,14 +75,12 @@ class OutputMetricsUpdaterSpec extends FlatSpec with Matchers with BeforeAndAfte
   }
 
   it should "create updater which does not use task metrics" in {
-    val tc = mock[TaskContext]
+    val tc = newTaskContext(useTaskMetrics = false)()
     val conf = new SparkConf(loadDefaults = false)
-    conf.set("spark.cassandra.output.metrics", "false")
-
-    SparkEnv.set(mock[SparkEnv])
+      .set("spark.cassandra.output.metrics", "false")
     val updater = OutputMetricsUpdater(tc, WriteConf.fromSparkConf(conf))
-
     val rc = newRichStatement()
+
     updater.batchFinished(success = true, rc, ts, ts)
     updater.batchFinished(success = false, rc, ts, ts)
 
@@ -99,15 +88,12 @@ class OutputMetricsUpdaterSpec extends FlatSpec with Matchers with BeforeAndAfte
   }
 
   it should "create updater which uses Codahale metrics" in {
-    val tc = newTaskContext()
-    val conf = new SparkConf(loadDefaults = false)
-    SparkEnv.set(mock[SparkEnv])
     val ccs = new CassandraConnectorSource
-    CassandraConnectorSource.instance should not be None
-
+    val tc = newTaskContext()(ccs)
+    val conf = new SparkConf(loadDefaults = false)
     val updater = OutputMetricsUpdater(tc, WriteConf.fromSparkConf(conf))
-
     val rc = newRichStatement()
+
     updater.batchFinished(success = true, rc, ts, ts)
     ccs.writeRowMeter.getCount shouldBe 10L
     ccs.writeByteMeter.getCount shouldBe 100L
@@ -125,30 +111,23 @@ class OutputMetricsUpdaterSpec extends FlatSpec with Matchers with BeforeAndAfte
   }
 
   it should "create updater which doesn't use Codahale metrics" in {
-    val tc = newTaskContext()
+    val tc = newTaskContext()()
     val conf = new SparkConf(loadDefaults = false)
-    SparkEnv.set(mock[SparkEnv])
-
     val updater = OutputMetricsUpdater(tc, WriteConf.fromSparkConf(conf))
     val rc = newRichStatement()
+
     updater.batchFinished(success = true, rc, ts, ts)
     updater.batchFinished(success = false, rc, ts, ts)
-
-    CassandraConnectorSource.instance shouldBe None
 
     updater.finish()
   }
 
   it should "work correctly with multiple threads" in {
-    val tc = newTaskContext()
+    val tc = newTaskContext()()
     tc.taskMetrics().outputMetrics = None
-
     val conf = new SparkConf(loadDefaults = false)
-    conf.set("spark.cassandra.output.metrics", "true")
-
-    SparkEnv.set(mock[SparkEnv])
+      .set("spark.cassandra.output.metrics", "true")
     val updater = OutputMetricsUpdater(tc, WriteConf.fromSparkConf(conf))
-
     val rc = newRichStatement()
 
     val latch = new CountDownLatch(32)
